change: moved model and history

--- a/speech-emotion-recognition-90.ipynb
+++ b/speech-emotion-recognition-90.ipynb
@@ -1666,7 +1666,7 @@
     "\n",
     "# applying early stopping for all models\n",
     "early_stop = callbacks.EarlyStopping(monitor='val_accuracy', patience=5, restore_best_weights=True, mode='max')\n",
-    "model_checkpoint = callbacks.ModelCheckpoint('best_model_24112024_400.keras', save_best_only=True, monitor='val_accuracy')\n",
+    "model_checkpoint = callbacks.ModelCheckpoint('model/best_model_24112024_400.keras', save_best_only=True, monitor='val_accuracy')\n",
     "reduce_lr = callbacks.ReduceLROnPlateau(monitor='val_accuracy', factor=0.5, patience=3, verbose=1, min_lr=0.00001)"
    ]
   },
@@ -2674,7 +2674,7 @@
    ],
    "source": [
     "# Save the highest accuracy model\n",
-    "MODEL.save('model_24112024_400_2.h5')\n",
+    "MODEL.save('model/model_24112024_400_2.h5')\n",
     "\n",
     "# Save the model history\n",
     "import pickle\n",
@@ -2699,7 +2699,7 @@
    ],
    "source": [
     "# see history of model\n",
-    "with open('model_history_24112024_400_2.pkl', 'rb') as file_pi:\n",
+    "with open('history/model_history_24112024_400_2.pkl', 'rb') as file_pi:\n",
     "    history = pickle.load(file_pi)\n",
     "\n",
     "print(history)"
