--- a/speech-emotion-recognition-indo.ipynb
+++ b/speech-emotion-recognition-indo.ipynb
@@ -16,20 +16,27 @@
    "source": [
     "# Speech Emotion Recognition\n",
     "\n",
-    "The objective of this notebook is to classify from raw sound waves to six emotions: happy, sad, neutral, fear, angry, and disgust. \n",
+    "Tujuan notebook ini adalah untuk mengklasifikasikan emosi berdasarkan gelombang suara mentah menjadi 6 kategori emosi:\n",
+    "1. Happy (Bahagia) dengan nilai 0\n",
+    "2. Sad (Sedih) dengan nilai 1\n",
+    "3. Neutral (Netral) dengan nilai 2\n",
+    "4. Fear (Takut) dengan nilai 3\n",
+    "5. Angry (Marah) dengan nilai 4\n",
+    "6. Disgust (Jijik) dengan nilai 5 \n",
     "\n",
-    "1. Gathering data\n",
-    "2. Quick EDA\n",
-    "3. Preprocess\n",
-    "4. Extract features\n",
-    "5. Build a LSTM\n",
-    "6. Evaluate and conclude\n",
+    "Langkah-langkah yang dilakukan:\n",
+    "1. Pengumpulan data\n",
+    "2. Eksplorasi Data Singkat (EDA)\n",
+    "3. Praproses\n",
+    "4. Ekstraksi fitur\n",
+    "5. Membangun model LSTM\n",
+    "6. Evaluasi dan kesimpulan\n",
     "\n",
-    "Datasets:\n",
-    "* Crowd-sourced Emotional Multimodal Actors Dataset (Crema-D)\n",
-    "* Ryerson Audio-Visual Database of Emotional Speech and Song (Ravdess)\n",
-    "* Surrey Audio-Visual Expressed Emotion (Savee)\n",
-    "* Toronto Emotional Speech Set (Tessa)"
+    "Dataset yang digunakan untuk training:\n",
+    "* [Ryerson Audio-Visual Database of Emotional Speech and Song (Ravdess)](https://www.kaggle.com/datasets/uwrfkaggler/ravdess-emotional-speech-audio)\n",
+    "* [Crowd-sourced Emotional Multimodal Actors Dataset (Crema-D)](https://www.kaggle.com/datasets/ejlok1/cremad)\n",
+    "* [Toronto Emotional Speech Set (Tessa)](https://www.kaggle.com/ejlok1/toronto-emotional-speech-set-tess)\n",
+    "* [Surrey Audio-Visual Expressed Emotion (Savee)](https://www.kaggle.com/ejlok1/SAVEE-database-download)"
    ]
   },
   {
@@ -46,9 +53,9 @@
     "tags": []
    },
    "source": [
-    "# 1. Gathering data\n",
+    "# 1. Pengumpulan Data\n",
     "\n",
-    "We will gather speech data from four datasets and store it in a single dataframe along with the corresponding file paths, gender labels and emotion labels. The size of each respective dataframe will be specified, along with an example filename in which the emotion label is bolded. "
+    "Data suara akan dikumpulkan dari empat dataset dan disimpan dalam satu dataframe bersama dengan path file dan label emosinya. Ukuran masing-masing dataframe akan dijelaskan, beserta contoh nama file di mana label emosi ditebalkan."
    ]
   },
   {
@@ -122,9 +129,9 @@
     "tags": []
    },
    "source": [
-    "**1. Ravdess Dataframe**\n",
+    "## 1.1. Ravdess\n",
     "\n",
-    "There are 1440 audio files, for example, 03-01-**06**-01-02-01-12.wav."
+    "Terdapat total 1440 file audio, dengan contoh, 03-01-**06**-01-02-01-12.wav."
    ]
   },
   {
@@ -272,9 +279,9 @@
     "tags": []
    },
    "source": [
-    "**2. Crema-D Dataframe**\n",
+    "## 1.2. Crema-D Dataframe\n",
     "\n",
-    "There are 7,442 audio files, for example, 1001_DFA_**ANG**_XX.wav."
+    "Terdapat 7,442 file audio, dengan contoh, 1001_DFA_**ANG**_XX.wav."
    ]
   },
   {
@@ -426,9 +433,9 @@
     "tags": []
    },
    "source": [
-    "**3. Tess Dataframe**\n",
+    "## 1.3. Tess Dataframe\n",
     "\n",
-    "There are 2,800 audio files, for example, OAF_base_**fear**.wav."
+    "Terdapat 2,800 file audio, dengan contoh, OAF_base_**fear**.wav."
    ]
   },
   {
@@ -576,9 +583,9 @@
     "tags": []
    },
    "source": [
-    "**4. Savee Dataframe**\n",
+    "## 1.4. Savee Dataframe\n",
     "\n",
-    "There are 480 audio files, for example, DC_**a**02.wav."
+    "Terdapat 480 file audio, dengan contoh, DC_**a**02.wav."
    ]
   },
   {
@@ -829,9 +836,9 @@
     "tags": []
    },
    "source": [
-    "# 2. Quick EDA\n",
+    "# 2. Exploratory Data Analysis (EDA)\n",
     "\n",
-    "We check for imbalances like male to female ratio. "
+    "Dilakukan pemeriksaan untuk mengetahui ketidakseimbangan, seperti rasio pria dan wanita."
    ]
   },
   {
@@ -944,6 +951,14 @@
     "# I decided to go with a female specific model \n",
     "df = df[df['sex'] == 'female']\n",
     "plot_distribution(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eeaa6821",
+   "metadata": {},
+   "source": [
+    "Dihapus kolom \"sex\" karena tidak diperlukan dalam training"
    ]
   },
   {
@@ -1146,13 +1161,13 @@
     "tags": []
    },
    "source": [
-    "# 3. Preprocess\n",
+    "# 3. Praproses\n",
     "\n",
-    "The following steps will be followed to preprocess the audio: \n",
+    "Dilakukan beberapa langkah dalam praproses audio:\n",
     "\n",
-    "1. Get an array of samples\n",
-    "2. Trim the silence  \n",
-    "3. Padding for equal length"
+    "1. Mendapat array dari audio\n",
+    "2. Menghilangkan suara hening\n",
+    "3. Padding untuk panjang yang sama"
    ]
   },
   {
@@ -1215,6 +1230,16 @@
    ],
    "source": [
     "from pydub import AudioSegment, effects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c7b4e0f",
+   "metadata": {},
+   "source": [
+    "- Audio dibaca dalam format yang ditentukan oleh `AudioSegment` dari `pydub` supaya dapat dimanipulasi dalam bentuk angka (float32).\n",
+    "- Setelah itu, dihapus bagian audio yang memiliki amplitudo di bawah batas (top_db = 25 dB). Bagian ini biasanya adalah suara yang hening.\n",
+    "- Menambahkan nilai nol (padding) di akhir array audio agar panjang audio sama/seragam, yaitu 180.000 sampel."
    ]
   },
   {
@@ -1300,11 +1325,21 @@
    "source": [
     "# 4. Extract features\n",
     "\n",
-    "We will only extract these features: \n",
+    "Ada tiga fitur yang diekstrak:\n",
     "\n",
-    "1. Mel-Frequency Cepstral Coefficients: captures the shape of the spectral envelope of a signal\n",
-    "2. Zero Crossing Rate: captures the number of times a signal changes sign per second\n",
-    "3. Root Mean Square Energy: captures the root mean square amplitude of the audio signal"
+    "1. Zero Crossing Rate\n",
+    "\n",
+    "Mengambil perubahan tanda (positif ke negatif atau sebaliknya) dalam sinyal per detik untuk membedakan emosi berdasarkan kecepatan dan sifat suara.\n",
+    "Suara bernada tinggi atau cepat seperti \"angry\" cenderung memiliki ZCR yang lebih tinggi dibandingkan suara yang lebih lambat atau tenang seperti \"sad\".\n",
+    "\n",
+    "2. Root Mean Square Energy\n",
+    "\n",
+    "Mengukur intensitas atau kekuatan suara untuk mendapat energi emosi.\n",
+    "Emosi \"angry\" atau \"fear\" biasanya memiliki RMS Energy yang lebih tinggi karena suara lebih keras atau intens. Sebaliknya, \"sad\" memiliki energi yang lebih rendah karena suara lebih lembut dan tenang.\n",
+    "\n",
+    "3. Mel-Frequency Cepstral Coefficients\n",
+    "\n",
+    "Merepresentasikan pola frekuensi dan mendapat tekstur suara yang menyerupai persepsi pendengaran manusia, seperti intonasi, nada, dan dinamika suara."
    ]
   },
   {
@@ -1428,7 +1463,7 @@
    "source": [
     "# 5. Build a LSTM\n",
     "\n",
-    "Before building the model, we will have to setup the data. LSTM are great for sequences.  "
+    "Sinyal audio adalah data urutan (_sequential data_) yang memiliki ketergantungan waktu. Emosi pada suara ditentukan oleh pola suara secara keseluruhan, sehingga LSTM yang menangkap hubungan jangka panjang dan pola temporal dalam data cocok untuk kasus ini."
    ]
   },
   {
@@ -2624,6 +2659,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a8817dbf",
+   "metadata": {},
+   "source": [
+    "Ditunjukkan bahwa model belajar dengan baik, walaupun sempat mengalami penurunan akurasi pada epoch tertentu."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "5b82380e",
@@ -2774,9 +2817,11 @@
     "tags": []
    },
    "source": [
-    "**Conclusion**\n",
+    "# Kesimpulan\n",
     "\n",
-    "In summary, our model achieved 90% accuracy in classifying six different emotions. However, there are several ways we could improve it. For example, we could change the model, obtain a better dataset and extract different features. One optimization that we could make is to generate a codebook and apply vector quantization to reduce the dimensionality. This can help to improve the model's training speed and reduce the risk of overfitting. Lastly, don't forget to use accelerators to speed up the training process. "
+    "Sebagai kesimpulan, model yang dikembangkan berhasil mencapai akurasi sebesar 94% dalam mengklasifikasikan 6 emosi yang berbeda. Setelah dilakukan percobaan pada beberapa dataset baru, masih terdapat kesalahan dalam mengklasifikasikan emosi tertentu.\n",
+    "\n",
+    "Meskipun demikian, terdapat beberapa cara untuk meningkatkan performanya. Misalnya, model dapat dimodifikasi, dataset yang lebih berkualitas dapat diperoleh, atau fitur yang berbeda dapat diekstraksi sehingga dapat menghasilkan akurasi yang lebih tinggi dan komputasi yang lebih cepat."
    ]
   },
   {
